--- a/src/components/AuditHistoryTable/components/RulesEngineInfo.scss
+++ b/src/components/AuditHistoryTable/components/RulesEngineInfo.scss
@@ -4,6 +4,7 @@
   border-radius: 5px;
   box-shadow: 1px 2px 4px #C3C9CD;
   border: 1px solid #C3C9CD;
+  margin-left: 20px;
   .nexus-c-rules-popup__header{
     font-weight: bold;
     margin-bottom: 10px;
